# HyperFox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  doxyfile.config
apps/: CMakeLists.txt  test.cpp
cmake/: FindZoltan.cmake  HyperFoxConfig.cmake.in  HyperFoxConfigVersion.cmake.in  hyperFoxDependencies.cmake  hyperFoxExternalDependencies.cmake
docker_container/: dockerfile.ubuntu
parbuild/: CMakeCache.txt  HyperFox.cmake  HyperFoxConfig.cmake  Makefile  cmake_install.cmake
parbuild/apps/: Makefile  cmake_install.cmake
parbuild/includes/: TestUtils.h
parbuild/src/: Makefile  cmake_install.cmake
parbuild/src/element/: Makefile  cmake_install.cmake
parbuild/src/field/: Makefile  cmake_install.cmake
parbuild/src/globals/: Makefile  cmake_install.cmake
parbuild/src/io/: Makefile  cmake_install.cmake
parbuild/src/mesh/: Makefile  cmake_install.cmake
parbuild/src/model/: Makefile  cmake_install.cmake
parbuild/src/operator/: Makefile  cmake_install.cmake
parbuild/src/parallel/: Makefile  cmake_install.cmake
parbuild/src/resolution/: Makefile  cmake_install.cmake
parbuild/src/solver/: Makefile  cmake_install.cmake
parbuild/tests/: Makefile  cmake_install.cmake
parbuild/tests/parallel/: Makefile  cmake_install.cmake
parbuild/tests/regression/: Makefile  cmake_install.cmake
parbuild/tests/underDevelopment/: Makefile  cmake_install.cmake
parbuild/tests/unittests/: Makefile  cmake_install.cmake
parbuild/tools/: Makefile  cmake_install.cmake
ressources/meshes/: fieldTest.h5  genLightTri.h5  generatedLightQuad.h5m  generatedLightQuad.vtk  generatedLightQuad2.h5m  generatedLightQuad2.vtk  generatedLightTri.h5m  generatedLightTri.vtk  generatedLightTri2.h5m  generatedLightTri2.vtk  lightQuad.h5  lightQuad2.h5  lightSquareOrd1.h5  lightSquareOrd1.msh  lightSquareOrd2.h5  lightSquareOrd2.msh  lightSquareOrd3.h5  lightSquareOrd3.msh  lightSquareOrd4.h5  lightSquareOrd4.msh  lightSquareOrd5.h5  lightSquareOrd5.msh  lightTestQuad.vtk  lightTestTri.vtk  lightTri.h5  lightTri2.h5  writeh5.py
ressources/meshes/regression/:  regression_dim-2_h-1e-1_ord-1.h5  correctedQuarterTorus_h1e-0_p1.h5  correctedQuarterTorus_h1e-0_p2.h5  correctedQuarterTorus_h1e-0_p3.h5  correctedQuarterTorus_h1e-0_p4.h5  correctedQuarterTorus_h1e-0_p5.h5  correctedQuarterTorus_h1e-1_p1.h5  correctedQuarterTorus_h1e-1_p2.h5  generateH5FromMsh.py  (+118 more)
src/: CMakeLists.txt
src/assembly/: CMakeLists.txt
src/element/: CMakeLists.txt  Cubature.cpp  Cubature.h  ElementGeometry.h  ReferenceElement.cpp  ReferenceElement.h
src/field/: BiotSavartIntegrator.cpp  BiotSavartIntegrator.h  CMakeLists.txt  Field.cpp  Field.h  FieldIntegrator.cpp  FieldIntegrator.h  FieldTypes.h  FunctionIntegrator.cpp  FunctionIntegrator.h  Integrator.cpp  Integrator.h  L2InnerProduct.cpp  L2InnerProduct.h  TField.cpp  TField.h
src/geometry/: CMakeLists.txt  GeometrySolver.cpp  GeometrySolver.h  IP2NodeSolver.cpp  IP2NodeSolver.h
src/globals/: CMakeLists.txt  DenseEigen.h  Modifier.h  ProgressBar.cpp  ProgressBar.h  Utils.h
src/io/: CMakeLists.txt  ErrorHandle.cpp  ErrorHandle.h  HDF5Io.cpp  HDF5Io.h  Io.cpp  Io.h  MoabMeshIo.cpp  MoabMeshIo.h
src/mesh/: .Mesh.cpp.swp  .Mesh.h.swp  CMakeLists.txt  CPolytope.cpp  CPolytope.h  ConvexHull.cpp  ConvexHull.h  Mesh.cpp  Mesh.h  Polytope.cpp  Polytope.h  Simplex.h
src/model/: AssemblyType.h  BohmModel.cpp  BohmModel.h  BoundaryModel.cpp  BoundaryModel.h  BurgersModel.cpp  BurgersModel.h  CMakeLists.txt  DiffusionSource.cpp  DiffusionSource.h  DirichletModel.cpp  DirichletModel.h  FEModel.cpp  FEModel.h  HDGBohmModel.cpp  HDGBohmModel.h  HDGBurgersModel.cpp  HDGBurgersModel.h  HDGConnectionLaplacianModel.cpp  HDGConnectionLaplacianModel.h  HDGConvectionDiffusionReactionSource.cpp  HDGConvectionDiffusionReactionSource.h  HDGDiffusionSource.cpp  HDGDiffusionSource.h  HDGEmbeddedModel.cpp  HDGEmbeddedModel.h  HDGLaplaceModel.cpp  HDGLaplaceModel.h  HDGModel.cpp  HDGModel.h  HDGTransport.cpp  HDGTransport.h  HDGnGammaModel.cpp  HDGnGammaModel.h  IntegratedDirichletModel.cpp  IntegratedDirichletModel.h  LaplaceModel.cpp  LaplaceModel.h  Model.cpp  Model.h  (+3 more)
src/operation/: CMakeLists.txt  Interpolator.h  Operator.h
src/operator/: CMakeLists.txt  Convection.cpp  Convection.h  Diffusion.cpp  Diffusion.h  DirichletCondition.cpp  DirichletCondition.h  Euler.cpp  Euler.h  HDGBase.cpp  HDGBase.h  HDGConvection.cpp  HDGConvection.h  HDGDiffusion.cpp  HDGDiffusion.h  HDGLinearizedConvection.cpp  HDGLinearizedConvection.h  HDGNabUU.cpp  HDGNabUU.h  HDGNonLinearOperator.cpp  HDGNonLinearOperator.h  HDGOperator.cpp  HDGOperator.h  HDGUNabU.cpp  HDGUNabU.h  Mass.cpp  Mass.h  NabUU.cpp  NabUU.h  NonLinearOperator.cpp  NonLinearOperator.h  Operator.cpp  Operator.h  RHSOperator.cpp  RHSOperator.h  RKType.h  Reaction.cpp  Reaction.h  RungeKutta.cpp  RungeKutta.h  (+6 more)
src/parallel/: CMakeLists.txt  Partitioner.cpp  Partitioner.h  ZoltanOpts.h  ZoltanPartitioner.cpp  ZoltanPartitioner.h
src/resolution/: CMakeLists.txt  LinAlgebraInterface.cpp  LinAlgebraInterface.h  PetscInterface.cpp  PetscInterface.h  PetscOptions.h  PetscOpts.h
src/solver/: BoundarySystem.cpp  BoundarySystem.h  CGSolver.cpp  CGSolver.h  CMakeLists.txt  HDGSolver.cpp  HDGSolver.h  HDGSolverOpts.h  NonLinearWrapper.cpp  NonLinearWrapper.h  Solver.cpp  Solver.h
tests/: CMakeLists.txt  TestUtils.h.in  configRessources.h.in
tests/field/: TestTField.cpp
tests/io/: TestErrorHandle.cpp
tests/mesh/: TestConvexHull.cpp  TestSimplex.cpp
tests/parallel/: TestParCGLaplace.cpp  TestParHDGConvectionDiffusionReactionSource.cpp  TestParHDGLaplace.cpp  TestZoltanPartitioner.cpp
tests/regression/: CMakeLists.txt
tests/underDevelopment/: TestCubature.cpp  TestHDF5Io.cpp  TestMoabMeshIo.cpp  TestReferenceElement.cpp
tools/: CMakeLists.txt  convergenceBurgers.py  convergenceDiffSrc.py  convertGmsh2H5HO.cpp  draw2DMeshh5.py  drawSolution.py  drawSolutionBurgers.py  drawSolutionBurgersStat.py  drawSolutionDiffSrc.py  meshOrderConvergence.py  mkVidDiffSrc.py  readh5.py  runtimeDiffSrc.py  writeh5.py
(+85 files in other folders)
